# traxxas_udr

./: .gitignore
traxxas_udr/: CMakeLists.txt  package.xml
traxxas_udr_description/: CMakeLists.txt  package.xml
traxxas_udr_description/launch/: traxxas_udr.launch
traxxas_udr_description/urdf/: traxxas_udr.urdf.xacro
traxxas_udr_gazebo/: CMakeLists.txt  package.xml
traxxas_udr_gazebo/configs/: traxxas_udr_ackermann_ctrlr_params.yaml  traxxas_udr_joint_ctrlr_params.yaml
traxxas_udr_gazebo/launch/: traxxas_udr.launch
