<?xml version="1.0"?>
<package format="2">
  <name>traxxas_udr</name>
  <version>0.0.0</version>
  <description>
	traxxas_udr is a group of packages for simulating a traxxas Ulitimate Desert 
	Racer for autonomous navigation, specifically for IARRC 2019
	</description>

  <maintainer email="kennesawagvt@gmail.com">KSU Autonomous Ground Vehicle Team</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>traxxas_udr_description</build_depend>
  <build_depend>traxxas_udr_gazebo</build_depend>
  <build_export_depend>traxxas_udr_description</build_export_depend>
  <build_export_depend>traxxas_udr_gazebo</build_export_depend>
  <exec_depend>traxxas_udr_description</exec_depend>
  <exec_depend>traxxas_udr_gazebo</exec_depend>


  <export>

  </export>
</package>
