<?xml version="1.0"?>
<package format="2">
  <name>traxxas_udr_description</name>
  <version>0.0.0</version>
  <description>
	package describing the details of the traxxas ultimate desert racer itself
	for use in simulations
	</description>

  <maintainer email="kennesawagvt@gmail.com">KSU Autonomous Ground Vehicle Team</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>

  </export>
</package>
