<?xml version="1.0"?>
<package format="2">
  <name>traxxas_udr_gazebo</name>
  <version>0.0.0</version>
  <description>
	The traxxas_udr_gazebo package is used with gazebo to simulate the 
	traxxas Ultimte Desert Racer
	</description>

  <maintainer email="kennesawagvt@gmail.com">KSU Autonomous Ground Vehicle Team</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>traxxas_udr_description</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>traxxas_udr_description</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>traxxas_udr_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>

  </export>
</package>
